--- a/Frontend/fashion/src/Components/Footer.css
+++ b/Frontend/fashion/src/Components/Footer.css
@@ -1,4 +1,4 @@
-.footer-content {
+/* .footer-content {
   display: flex;
   justify-content: center;
   gap: 4rem;
@@ -22,4 +22,62 @@
   margin: 0.3rem 0;
   font-size: 1rem;
   color: #fff;
+} */
+
+.footer {
+  background-color: #000;
+  color: white;
+  padding: 40px 20px;
+  font-family: Arial, sans-serif;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1200px;
+  margin-inline: 490px;
+}
+
+.footer-section {
+  flex: 1 1 180px;
+  margin: 10px 20px;
+  margin-left: auto;
+}
+
+.footer-section h4 {
+  font-size: 25px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #555;
+  padding-bottom: 5px;
+}
+
+.footer-section p,
+.footer-section li {
+  font-size: 23px;
+  margin:  0;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.footer-section li:hover {
+  color: #f0c040;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+  margin-right: 3rem;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: flex-start;
+    
+  }
+
+  .footer-section {
+    margin: 20px 0;
+  }
 }
