--- a/Frontend/fashion/src/Components/Signup.css
+++ b/Frontend/fashion/src/Components/Signup.css
@@ -197,7 +197,7 @@ footer {
 
 /* Signup container with background image */
 .signup-container {
-  background: url('C:\Users\91984\Desktop\Fashion\snippet-website\Frontend\fashion\public\photo1.PNG') no-repeat center center;
+  background: url('C:\Users\Anand\Desktop\snippet-website\Frontend\fashion\public\photo1.PNG') no-repeat center center;
   background-size: cover;
   padding: 40px 30px;
   border-radius: 12px;
