--- a/Frontend/fashion/src/Components/Navbar.css
+++ b/Frontend/fashion/src/Components/Navbar.css
@@ -1,9 +1,9 @@
 /* src/components/Navbar.css */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 
-.brand-title{
-    background-color: white;
-    font-size:53px;
+.brand-title {
+  background-color: white;
+  font-size: 53px;
 }
 
 .navbar {
@@ -21,7 +21,7 @@
 }
 
 .logo {
-  font-size: 2 rem;
+  font-size: 2rem;
   font-weight: 700;
   color: black;
   text-decoration: none;
@@ -44,8 +44,8 @@
 
 .navbar-center a:hover,
 .navbar-right a:hover {
-cursor: pointer;
- border: 1px solid black;
+  cursor: pointer;
+  border: 1px solid black;
 }
 
 .dropdown {
@@ -63,7 +63,7 @@ cursor: pointer;
   z-index: 1001;
   min-width: 160px;
   flex-direction: column;
-   font-size: 2rem;
+  font-size: 2rem;
   justify-content: space-evenly;
 }
 
@@ -73,7 +73,6 @@ cursor: pointer;
   color: black;
   background-color: white;
   font-size: 17px;
-
 }
 
 .dropdown p {
@@ -84,9 +83,10 @@ cursor: pointer;
   cursor: pointer;
 }
 
-.dropdown p:hover{
- border: 1px solid black;
+.dropdown p:hover {
+  border: 1px solid black;
 }
+
 .dropdown-content a:hover {
   background-color: #f0f0f0;
 }
@@ -138,6 +138,21 @@ cursor: pointer;
   border: none;
   background: transparent;
   outline: none;
-  margin-right:0;
+  margin-right: 0;
   font-size: 14px;
+}
+
+/* Home button styled like other navbar links */
+.home-button {
+  color: black;
+  text-decoration: none;
+  font-size: 1.9rem;
+  font-weight: 500;
+  transition: color 0.3s ease;
+  margin-right: 20px;
+}
+
+.home-button:hover {
+  cursor: pointer;
+  border: 1px solid black;
 }
