--- a/Frontend/fashion/src/Components/Login.css
+++ b/Frontend/fashion/src/Components/Login.css
@@ -13,6 +13,7 @@ html, body {
   font-size: 2.9rem;
   padding: 10px 20px;
   font-family: 'Georgia', serif;
+  text-align: left;
 }
 
 /* Wrapper to center image and box */
