--- a/Frontend/fashion/src/Components/ProductCard.css
+++ b/Frontend/fashion/src/Components/ProductCard.css
@@ -19,6 +19,8 @@
   position: relative;
   margin-bottom: 20px;         /* ✅ Ensure space below card */
    min-width: 0; 
+    width: 280px;                   /* Fixed width for uniformity */
+  height: 450px; 
 }
 
 
@@ -30,10 +32,11 @@
 /* ✅ IMAGE */
 .product-img {
   width: 100%;
-  height: 220px;               /* Adjusted for increased card height */
+  height: 250px;               /* Adjusted for increased card height */
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 12px;
+  aspect-ratio: 1 / 1;
 }
 
 /* ✅ HEART ICON */
